gerador_roteiros/tests/testfiles/0.9.0/generatorvalidation/invalid/cenario_fora_do_padrao.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346676132474" ID="ID_1656020112" MODIFIED="1346676135371" TEXT="MM">
<node CREATED="1346676136213" ID="ID_944912032" MODIFIED="1346676142348" POSITION="right" TEXT="CENARIO FORA DO PADRAO">
<node CREATED="1346676143061" ID="ID_1199404190" MODIFIED="1346676150265" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1"/>
</node>
</node>
</map>
